influxdb/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  selector:
    app: influxdb
  ports:
    - port: 8086
      targetPort: 8086
