influxdb/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: influxdb
spec:
  rules:
    - host: influxdb.nuc
      http:
        paths:
          - path: /
            backend:
              serviceName: influxdb
              servicePort: 8086
